--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
@@ -61,7 +61,13 @@ html:not(.touch) .editable-item {
     cursor: help;
 }
 
-
+h2{
+    a{
+        i.raa-icon-comment{
+            vertical-align: middle;
+        }
+    }
+}
 
 
 // Dashboard 
