--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/main-ie8.css
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/main-ie8.css
@@ -6150,6 +6150,9 @@ html:not(.touch) .editable-item {
   color: #28a197;
   cursor: help; }
 
+h2 a i.raa-icon-comment {
+  vertical-align: middle; }
+
 .applicant-location,
 .applicant-distance {
   display: block; }
