--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/modules/_vacancy.scss
@@ -45,3 +45,11 @@ html:not(.touch) .editable-item {
     color: $turquoise;
     cursor: help;
 }
+
+h2{
+    a{
+        i.raa-icon-comment{
+            vertical-align: middle;
+        }
+    }
+}
