--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
@@ -6159,6 +6159,9 @@ html:not(.touch) .editable-item {
   color: #28a197;
   cursor: help; }
 
+h2 a i.raa-icon-comment {
+  vertical-align: middle; }
+
 .vacancies-summary {
   list-style: none;
   margin: 0;
