Bugfixes for US833 and US844

--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
@@ -67,28 +67,22 @@
                             {
                                 <tr>
                                     <td>
-                                        <div class="vac-title">@vacancy.Title</div>
+                                        <span class="vac-title">@vacancy.Title</span>
                                     </td>
                                     <td>
-                                        <div>@vacancy.VacancyReferenceNumber</div>
+                                        <span>@vacancy.VacancyReferenceNumber</span>
                                     </td>
                                     <td>
                                         @Html.DisplayFor(model => vacancy.Status)
                                     </td>
                                     <td>
-                                        <div>@vacancy.ProviderName</div>
+                                        <span>@vacancy.ProviderName</span>
                                     </td>
                                     <td>
-                                        <div>@if (vacancy.DateSubmitted.HasValue)
-                                             {
-                                                 vacancy.DateSubmitted.Value.ToFriendlyClosingToday();
-                                             }</div>
+                                        <span>@vacancy.DateSubmitted.ToFriendlyClosingToday()</span>
                                     </td>
                                     <td>
-                                        <div>@if (vacancy.ClosingDate.HasValue)
-                                             {
-                                                 vacancy.ClosingDate.Value.ToFriendlyClosingToday();
-                                             }</div>
+                                        <span>@vacancy.ClosingDate.ToFriendlyClosingToday()</span>
                                     </td>
                                     <td>
                                         @if (vacancy.CanBeReservedForQaByCurrentUser)
