--- a/src/SFA.Apprenticeships.Web.Manage/Views/Shared/DisplayTemplates/ProviderVacancyStatuses.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Shared/DisplayTemplates/ProviderVacancyStatuses.cshtml
@@ -4,6 +4,9 @@
 @switch (Model)
 {
     case ProviderVacancyStatuses.PendingQA:
-        <div>Pending QA</div>
+        <span>Pending QA</span>
+        break;
+    case ProviderVacancyStatuses.ReservedForQA:
+        <span>Reserved for QA</span>
         break;
 }
