--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Comment.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Comment.cshtml
@@ -5,9 +5,7 @@
     <details class="open" open>
         <summary>Comment</summary>
         <div class="detail-content qa-comment">
-            <div class="blocklabel-single-container">
-                @Model
-            </div>
+            <div class="blocklabel-single-container preserve-formatting">@Model</div>
         </div>
     </details>
 }
