--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/main.css
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/main.css
@@ -6153,6 +6153,9 @@ html:not(.touch) .editable-item {
 h2 a i.raa-icon-comment {
   vertical-align: middle; }
 
+.preserve-formatting {
+  white-space: pre-line; }
+
 .applicant-location,
 .applicant-distance {
   display: block; }
