--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
@@ -6162,6 +6162,9 @@ html:not(.touch) .editable-item {
 h2 a i.raa-icon-comment {
   vertical-align: middle; }
 
+.preserve-formatting {
+  white-space: pre-line; }
+
 .vacancies-summary {
   list-style: none;
   margin: 0;
