--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySubmitted.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySubmitted.cshtml
@@ -1,4 +1,5 @@
 ﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.SubmittedVacancyViewModel
+@using SFA.Apprenticeships.Infrastructure.Presentation
 @using SFA.Apprenticeships.Web.Recruit.Constants
 @{
     ViewBag.Title = "Recruit an Apprentice - Confirmation of submission";
@@ -6,7 +7,7 @@
 
 <div class="success-banner">
     <h1 class="heading-large no-btm-margin"><i class="fa fa-check"></i>Vacancy submitted for approval</h1>
-    <p>Reference number: @Model.VacancyReferenceNumber</p>
+    <p>Reference number: @Model.VacancyReferenceNumber.GetVacancyReference()</p>
 </div>
 <section>
     <hgroup class="hgroup-medium text">
