--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -7,6 +7,7 @@
     }
 }
 @using SFA.Apprenticeships.Domain.Entities.Vacancies.ProviderVacancies
+@using SFA.Apprenticeships.Infrastructure.Presentation
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.ProviderUser
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
 @using SFA.Apprenticeships.Web.Recruit.Constants
@@ -211,12 +212,19 @@
                                     @vacancy.NewVacancyViewModel.ProviderSiteEmployerLink.Employer.Name
                                 </td>
                                 <td class="vac-ref-number" data-label="Vacancy ref">
-                                    @vacancy.VacancyReferenceNumber
+                                    @vacancy.VacancyReferenceNumber.GetVacancyReference()
                                 </td>
                                 <td class="vac-no-of-applications" data-label="Number of applications">
                                     @if (vacancy.Status == ProviderVacancyStatuses.Live)
                                     {
-                                        <span>0 applications</span>
+                                        if (@vacancy.ApplicationCount == 1)
+                                        {
+                                            <span>1 application</span>
+                                        }
+                                        else
+                                        {
+                                            <span>@vacancy.ApplicationCount applications</span>
+                                        }
                                     }
                                     else
                                     {
