--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
@@ -1,4 +1,5 @@
-﻿@using SFA.Apprenticeships.Web.Manage.Constants
+﻿@using SFA.Apprenticeships.Infrastructure.Presentation
+@using SFA.Apprenticeships.Web.Manage.Constants
 @model SFA.Apprenticeships.Web.Manage.ViewModels.HomeViewModel
 
 @{
@@ -70,7 +71,7 @@
                                         <span class="vac-title">@vacancy.Title</span>
                                     </td>
                                     <td>
-                                        <span>@vacancy.VacancyReferenceNumber</span>
+                                        <span>@vacancy.VacancyReferenceNumber.GetVacancyReference()</span>
                                     </td>
                                     <td>
                                         @Html.DisplayFor(model => vacancy.Status)
