--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
@@ -6156,8 +6156,7 @@ html:not(.touch) .editable-item {
 
 .raa-icon-comment {
   font-size: 19px !important;
-  color: #28a197;
-  cursor: help; }
+  color: #28a197; }
 
 h2 a i.raa-icon-comment {
   vertical-align: middle; }
