--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_CommentIcon.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_CommentIcon.cshtml
@@ -1,6 +1,7 @@
-﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.CommentViewModel
+﻿@using SFA.Apprenticeships.Domain.Entities.Vacancies.ProviderVacancies
+@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.CommentViewModel
     
-@if (Model.HasComment)
+@if (Model.HasComment && Model.Status != ProviderVacancyStatuses.Live)
 {
     <a href="@Model.ViewCommentUrl"><i class="fa fa-comment the-icon raa-icon-comment" title="there are comments"><span class="visuallyhidden">there are comments</span></i></a>
 }
