--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_EditLink.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_EditLink.cshtml
@@ -1,6 +1,8 @@
-﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.EditLinkViewModel
-    
-@{
+﻿@using SFA.Apprenticeships.Domain.Entities.Vacancies.ProviderVacancies
+@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.EditLinkViewModel
+
+@if (Model.Status != ProviderVacancyStatuses.Live)
+{
     var linkText = Model.CommentViewModel.HasComment ? "Edit/View feedback" : "Edit";
+    <a href="@Model.EditUrl" class="edit-comment-link">@linkText</a>
 }
-<a href="@Model.EditUrl" class="edit-comment-link">@linkText</a>
