Fixing links on vacancy applications page

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/_applicationStatus.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/_applicationStatus.cshtml
@@ -10,7 +10,7 @@
         <span class="tag-inprogress">In progress</span>
         break;
     case ApplicationStatuses.Successful:
-        <span class="tag-successful">Successful</span>
+        <span class="tag-success">Successful</span>
         break;
     case ApplicationStatuses.Unsuccessful:
         <span class="tag-rejected">Unsuccessful</span>
