--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/VacancyApplications.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/VacancyApplications.cshtml
@@ -1,4 +1,5 @@
-﻿@model SFA.Apprenticeships.Web.Recruit.ViewModels.Application.VacancyApplicationsViewModel
+﻿@using SFA.Apprenticeships.Web.Recruit.Constants
+@model SFA.Apprenticeships.Web.Recruit.ViewModels.Application.VacancyApplicationsViewModel
 
 @{
     ViewBag.Title = "Recruit an Apprentice - Vacancy applications";
@@ -19,7 +20,7 @@
                         <div class="text" itemprop="description">
                             <p id="vacancy-description" class="preserve-formatting">@Model.ShortDescription</p>
                             <p>
-                                <a href="live-apprenticeship.html">View apprenticeship</a>
+                                <a href="@Url.RouteUrl(RecruitmentRouteNames.PreviewVacancy, new {vacancyReferenceNumber = Model.VacancyReferenceNumber})" class="disp-block">View apprenticeship</a>
                             </p>
                         </div>
                     </div>
@@ -27,7 +28,7 @@
             </div>
             <div class="grid grid-1-3">
                 <p class="small-btm-margin">
-                    <a href="create-vacancy-clone.html">Clone</a>
+                    <a href="">Clone</a>
                 </p>
                 <p class="small-btm-margin">
                     <a href="">Extend</a>
@@ -39,6 +40,44 @@
                     <a href="">Close</a>
                 </p>
             </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="panel-indent text">
+            @{
+                var daysTillClose = (Model.ClosingDate - DateTime.UtcNow).Days;
+                if (daysTillClose == 0)
+                {
+                    <p>This vacancy is closing today.</p>
+                }
+                if (daysTillClose == 1)
+                {
+                    <p>This vacancy is due to close in 1 day.</p>
+                }
+                if (daysTillClose > 1)
+                {
+                    <p>This vacancy is due to close in @daysTillClose days.</p>
+                }
+            }
+
+            @if (Model.RejectedApplicationsCount == 1)
+            {
+                <p>You've rejected 1 application.</p>
+            }
+            else if (Model.RejectedApplicationsCount > 1)
+            {
+                <p>You've rejected @Model.RejectedApplicationsCount applications.</p>
+            }
+
+            @if (Model.RejectedApplicationsCount == 1)
+            {
+                <p>There are still 1 application to send an outcome to.</p>
+            }
+            else if (Model.RejectedApplicationsCount > 1)
+            {
+                <p>There are still @Model.RejectedApplicationsCount applications to send an outcome to.</p>
+            }
         </div>
     </section>
 
@@ -76,7 +115,7 @@
                     <td>
                         <h4 class="applicant-name">
                             <input class="applicantCheckbox" type="checkbox">
-                            <a href="candidate-application.html" title="View @applicationSummary.ApplicantName application">@applicationSummary.ApplicantName</a>
+                            <a href="" title="View @applicationSummary.ApplicantName application">@applicationSummary.ApplicantName</a>
                         </h4>
                     </td>
                     <td>
